--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=literalura
 
 #Configuração do PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5433/literalura_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/literalura_db
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.data.jdbc.dialect=postgresql
+spring.jooq.sql-dialect=POSTGRES
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.jpa.hibernate.ddl-auto=validate
