--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=literalura
 
-#Configuração do PostgreSQL
+#Configuracao do PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/literalura_db
 spring.datasource.username=postgres
 spring.datasource.password=root
